--- a/webapp/templates/employees.html
+++ b/webapp/templates/employees.html
@@ -9,9 +9,12 @@
 </head>
 <body class="bg-light">
     <div class="container mt-4"> <!-- container centers content; mt-4 adds margin-top for spacing -->
-        <h1 class="mb-4">Employee List</h1> <!-- big heading with bottom margin -->
+        <h1 class="mb-4">Employee Records</h1> <!-- big heading with bottom margin -->
 
         <!--button to add a new employee-->
+        <a href="/" class="btn btn-secondary mb-3">Home</a>
+         <a href="/events" class="btn btn-primary mb-3">Events</a>
+         <a href="/attendance" class="btn btn-primary mb-3">Attendance</a>
         <a href="/add-employee" class="btn btn-success mb-3">Add Employee</a>
 
         <!--display employee list -->
